crates/proto-flow/tests/snapshots/regression__derive_response_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_catalogue(ex_derive_responses())
---
// spec
|0aae0208 d787b901 12137b22 636f6e66| ..........{"conf 00000000
|6967223a 22736368 656d6122 7d1a137b| ig":"schema"}..{ 00000010
|226c616d 62646122 3a227363 68656d61| "lambda":"schema 00000020
|227d2214 68747470 733a2f2f 6578616d| "}".https://exam 00000030
|706c652f 646f6373 2ae6010a 0e6f6175| ple/docs*....oau 00000040
|74682d70 726f7669 64657212 10687474| th-provider..htt 00000050
|70733a2f 2f617574 682d7572 6c1a1468| ps://auth-url..h 00000060
|74747073 3a2f2f61 63636573 732d746f| ttps://access-to 00000070
|6b656e22 03666f6f 2a1a0a07 6864722d| ken".foo*...hdr- 00000080
|6f6e6512 0f7b2268 656c6c6f 223a2268| one..{"hello":"h 00000090
|6472227d 2a0f0a07 6864722d 74776f12| dr"}*...hdr-two. 000000a0
|0434322e 35320b0a 03666f6f 12047472| .42.52...foo..tr 000000b0
|7565320e 0a036b65 79120722 76616c75| ue2...key.."valu 000000c0
|65223a15 68747470 733a2f2f 72656672| e":.https://refr 000000d0
|6573682d 746f6b65 6e420872 65667265| esh-tokenB.refre 000000e0
|7368214a 1e0a0968 64722d74 68726565| sh!J...hdr-three 000000f0
|12117b22 72656672 65736822 3a226864| ..{"refresh":"hd 00000100
|72227d52 100a0661 63636573 73120622| r"}R...access.." 00000110
|68657265 225a0450 4f535462 04504f53| here"Z.POSTb.POS 00000120
|54|                                  T                00000130
                                                       00000131

// validated
|12310a02 08010a00 12290a1e 66696c65| .1.......)..file 00000000
|3a2f2f2f 70726f6a 6563742f 726f6f74| :///project/root 00000010
|2f64656e 6f2e6a73 6f6e1207 636f6e74| /deno.json..cont 00000020
|656e74|                              ent              00000030
                                                       00000033

// opened
|1a660a64 0a4a0a15 612f7265 61642f6a| .f.d.J..a/read/j 00000000
|6f75726e 616c3b73 75666669 78123108| ournal;suffix.1. 00000010
|b9601215 0a050309 08050712 0c09e321| .`.............! 00000020
|00000000 000010d7 0812150a 05070c66| ...............f 00000030
|2b1d120c 09350100 00000000 0010ae11| +....5.......... 00000040
|12160a0e 616e2f61 636b2f6a 6f75726e| ....an/ack/journ 00000050
|616c1204 03040205|                   al......         00000060
                                                       00000068

// published
|22150a13 7b227075 626c6973 68656422| "...{"published" 00000000
|3a22646f 63227d|                     :"doc"}          00000010
                                                       00000017

// flushed
|2a021001|                            *...             00000000
                                                       00000004

// started_commit
|32180a16 0a127b22 73746174 65223a22| 2.....{"state":" 00000000
|75706461 7465227d 1001|              update"}..       00000010
                                                       0000001a

// internal
|a2060612 02486918 01|                .....Hi..        00000000
                                                       00000009
