crates/proto-flow/tests/snapshots/regression__log_json.snap
---
source: crates/proto-flow/tests/regression.rs
expression: json_test(msg)
---
{
  "_meta": {
    "uuid": "c13a3412-903a-40f2-8bca-0a2f4d9260be"
  },
  "shard": {
    "kind": "derivation",
    "name": "my/cool/task",
    "keyBegin": "00112233",
    "rClockBegin": "aabbccdd"
  },
  "ts": "1970-01-01T00:00:00+00:00",
  "level": "info",
  "message": "my log message",
  "fields": {
    "a": 42,
    "structured": {"log":"fields"}
  },
  "spans": [
    {
      "message": "some parent span",
      "fields": {
        "more": ["structured","stuff",true]
      }
    }
  ]
}
