crates/proto-flow/tests/snapshots/regression__log_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a260a24 63313361 33343132 2d393033| .&.$c13a3412-903 00000000
|612d3430 66322d38 6263612d 30613266| a-40f2-8bca-0a2f 00000010
|34643932 36306265 12240802 120c6d79| 4d9260be.$....my 00000020
|2f636f6f 6c2f7461 736b1a08 30303131| /cool/task..0011 00000030
|32323333 22086161 62626363 64641a00| 2233".aabbccdd.. 00000040
|20032a0e 6d79206c 6f67206d 65737361|  .*.my log messa 00000050
|67653207 0a016112 02343232 1e0a0a73| ge2...a..422...s 00000060
|74727563 74757265 6412107b 226c6f67| tructured..{"log 00000070
|223a2266 69656c64 73227d3a 372a1073| ":"fields"}:7*.s 00000080
|6f6d6520 70617265 6e742073 70616e32| ome parent span2 00000090
|230a046d 6f726512 1b5b2273 74727563| #..more..["struc 000000a0
|74757265 64222c22 73747566 66222c74| tured","stuff",t 000000b0
|7275655d|                            rue]             000000c0
                                                       000000c4
