crates/proto-flow/tests/snapshots/regression__materialization_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a166163 6d65436f 2f6d6174 65726961| ..acmeCo/materia 00000000
|6c697a61 74696f6e 10081a1d 7b226d61| lization....{"ma 00000010
|74657269 616c697a 65223a7b 22636f6e| terialize":{"con 00000020
|66696722 3a34327d 7d229f06 0a157b22| fig":42}}"....{" 00000030
|7265736f 75726365 223a2263 6f6e6669| resource":"confi 00000040
|67227d12 04736f6d 65120470 6174681a| g"}..some..path. 00000050
|e2030a11 61636d65 436f2f63 6f6c6c65| ....acmeCo/colle 00000060
|6374696f 6e1a082f 6b65792f 6f6e651a| ction../key/one. 00000070
|082f6b65 792f7477 6f220b2f 5f6d6574| ./key/two"./_met 00000080
|612f7575 69642a04 74797065 2a067265| a/uuid*.type*.re 00000090
|67696f6e 32c0010a 092f6a73 6f6e2f70| gion2..../json/p 000000a0
|74721207 612d6669 656c6420 0132a701| tr..a-field .2.. 000000b0
|0a07696e 74656765 720a0673 7472696e| ..integer..strin 000000c0
|671a2e1a 03747970 22046461 746530b9| g....typ".date0. 000000d0
|603a0365 6e634203 3130304a 14313834| `:.encB.100J.184 000000e0
|34363734 34303733 37303935 35313631| 4674407370955161 000000f0
|35220574 69746c65 2a046465 7363320e| 5".title*.desc2. 00000100
|7b226465 66223a22 61756c74 227d4001| {"def":"ault"}@. 00000110
|4a0b0801 11000000 0000408f c0521508| J.........@..R.. 00000120
|0a100118 1422046e 756c6c22 07696e74| .....".null".int 00000130
|65676572 5a0b2263 6f6e7374 2d6f6e65| egerZ."const-one 00000140
|225a0b22 636f6e73 742d7477 6f226006| "Z."const-two"`. 00000150
|68037203 7479703a 0e7b2261 636b223a| h.r.typ:.{"ack": 00000160
|22747275 65227d42 127b2277 72697465| "true"}B.{"write 00000170
|223a2273 6368656d 61227d4a a3010a12| ":"schema"}J.... 00000180
|70617274 6974696f 6e2f7465 6d706c61| partition/templa 00000190
|74651003 1a400a1e 0a0f6573 74756172| te...@....estuar 000001a0
|792e6465 762f666f 6f120b6c 6162656c| y.dev/foo..label 000001b0
|2d76616c 75650a1e 0a0f6573 74756172| -value....estuar 000001c0
|792e6465 762f6261 72120b6f 74686572| y.dev/bar..other 000001d0
|2d76616c 75652242 08e9ec06 10031a12| -value"B........ 000001e0
|73333a2f 2f627563 6b65742f 70726566| s3://bucket/pref 000001f0
|69782203 08ac0232 07083e10 80e59a77| ix"....2..>....w 00000200
|3a185061 74687b7b 506f7374 6669782e| :.Path{{Postfix. 00000210
|54656d70 6c617465 7d7d3004 38cfb0f5| Template}}0.8... 00000220
|015a117b 22726561 64223a22 73636865| .Z.{"read":"sche 00000230
|6d61227d 22550a07 6b65792f 6f6e6512| ma"}"U..key/one. 00000240
|0776616c 2f74776f 1a0d666c 6f775f64| .val/two..flow_d 00000250
|6f63756d 656e7422 1d0a0761 5f666965| ocument"...a_fie 00000260
|6c641212 7b226669 656c6422 3a22636f| ld..{"field":"co 00000270
|6e666967 227d2213 0a0b6f74 6865722f| nfig"}"...other/ 00000280
|6669656c 64120434 322e353a 5b0a400a| field..42.5:[.@. 00000290
|1e0a0f65 73747561 72792e64 65762f66| ...estuary.dev/f 000002a0
|6f6f120b 6c616265 6c2d7661 6c75650a| oo..label-value. 000002b0
|1e0a0f65 73747561 72792e64 65762f62| ...estuary.dev/b 000002c0
|6172120b 6f746865 722d7661 6c756512| ar..other-value. 000002d0
|170a150a 086d792d 6c616265 6c120770| .....my-label..p 000002e0
|72656669 782f1801 42316d61 74657269| refix/..B1materi 000002f0
|616c697a 652f6163 6d65436f 2f6d6174| alize/acmeCo/mat 00000300
|65726961 6c697a61 74696f6e 2f736f6d| erialization/som 00000310
|65253230 70617468 2e763148 03520608| e%20path.v1H.R.. 00000320
|cbc8d6a6 065a0608 80888ba1 0660016a| .....Z.......`.j 00000330
|0e736f6d 65253230 70617468 2e763172| .some%20path.v1r 00000340
|0a088080 0410e807 18e8072a 80010a0e| ...........*.... 00000350
|73686172 642f7465 6d706c61 74651a0f| shard/template.. 00000360
|7265636f 76657279 2f707265 66697822| recovery/prefix" 00000370
|0b68696e 742f7072 65666978 28033202| .hint/prefix(.2. 00000380
|083c4801 52400a1e 0a0f6573 74756172| .<H.R@....estuar 00000390
|792e6465 762f666f 6f120b6c 6162656c| y.dev/foo..label 000003a0
|2d76616c 75650a1e 0a0f6573 74756172| -value....estuar 000003b0
|792e6465 762f6261 72120b6f 74686572| y.dev/bar..other 000003c0
|2d76616c 7565608c dc0268e9 ec063238| -value`...h...28 000003d0
|0a117265 636f7665 72792f74 656d706c| ..recovery/templ 000003e0
|61746510 03222108 80804010 041a1473| ate.."!...@....s 000003f0
|333a2f2f 6275636b 65742f72 65636f76| 3://bucket/recov 00000400
|65727922 0308ac02 3a0c0890 3f120568| ery"....:...?..h 00000410
|74747073 18013a03 08a84652 4e5b7b22| ttps..:...FRN[{" 00000420
|6d657468 6f64223a 22504f53 54222c22| method":"POST"," 00000430
|7061796c 6f616454 656d706c 61746522| payloadTemplate" 00000440
|3a227b7d 222c2275 726c223a 22687474| :"{}","url":"htt 00000450
|70733a2f 2f657861 6d706c65 2e636f6d| ps://example.com 00000460
|2f776562 686f6f6b 227d5d5a 0a323032| /webhook"}]Z.202 00000470
|352d3037 2d303962 707b2262 61736549| 5-07-09bp{"baseI 00000480
|6e746572 76616c22 3a223468 222c2274| nterval":"4h","t 00000490
|696d657a 6f6e6522 3a22416d 65726963| imezone":"Americ 000004a0
|612f4e65 775f596f 726b222c 2277696e| a/New_York","win 000004b0
|646f7773 223a5b7b 22656e64 223a2231| dows":[{"end":"1 000004c0
|373a3030 222c2269 6e746572 76616c22| 7:00","interval" 000004d0
|3a223330 6d222c22 73746172 74223a22| :"30m","start":" 000004e0
|30393a30 30227d5d 7d72280a 0f61636d| 09:00"}]}r(..acm 000004f0
|65436f2f 70617373 776f7264 12152f63| eCo/password../c 00000500
|72656465 6e746961 6c732f70 61737377| redentials/passw 00000510
|6f726472 150a1361 636d6543 6f2f7768| ordr...acmeCo/wh 00000520
|6f6c652d 636f6e66 69677a2e 0801122a| ole-configz....* 00000530
|0a126170 692e6163 6d65636f 2e657861| ..api.acmeco.exa 00000540
|6d706c65 0a142a2e 7376632e 61636d65| mple..*.svc.acme 00000550
|636f2e65 78616d70 6c65|              co.example       00000560
                                                       0000056a
