crates/proto-flow/tests/snapshots/regression__materialize_request_json.snap
---
source: crates/proto-flow/tests/regression.rs
expression: json_catalogue(ex_materialize_requests())
---
// spec
{
  "spec": {
    "connectorType": "IMAGE",
    "config": {"spec":"config"}
  }
}

// validate
{
  "validate": {
    "name": "validate/materialization",
    "connectorType": "IMAGE",
    "config": {"validate":"config"},
    "bindings": [
      {
        "resourceConfig": {"resource":"config"},
        "collection": {
          "name": "acmeCo/collection",
          "writeSchema": {"write":"schema"},
          "readSchema": {"read":"schema"},
          "key": [
            "/key/one",
            "/key/two"
          ],
          "uuidPtr": "/_meta/uuid",
          "partitionFields": [
            "type",
            "region"
          ],
          "projections": [
            {
              "ptr": "/json/ptr",
              "field": "a-field",
              "isPartitionKey": true,
              "inference": {
                "types": [
                  "integer",
                  "string"
                ],
                "string": {
                  "contentType": "typ",
                  "format": "date",
                  "contentEncoding": "enc",
                  "maxLength": 12345,
                  "strMinimum": "100",
                  "strMaximum": "18446744073709551615"
                },
                "title": "title",
                "description": "desc",
                "default": {"def":"ault"},
                "exists": "MUST",
                "numeric": {
                  "hasMinimum": true,
                  "minimum": -1000.0
                },
                "array": {
                  "minItems": 10,
                  "hasMaxItems": true,
                  "maxItems": 20,
                  "itemTypes": [
                    "null",
                    "integer"
                  ]
                },
                "enum": [
                  "const-one",
                  "const-two"
                ],
                "reduce": "REDUCE_MERGE",
                "redact": "REDACT_SHA256",
                "contentMediaType": "typ"
              }
            }
          ],
          "ackTemplate": {"ack":"true"},
          "partitionTemplate": {
            "name": "partition/template",
            "replication": 3,
            "labels": {
              "labels": [
                {
                  "name": "estuary.dev/foo",
                  "value": "label-value"
                },
                {
                  "name": "estuary.dev/bar",
                  "value": "other-value"
                }
              ]
            },
            "fragment": {
              "length": "112233",
              "compressionCodec": "ZSTANDARD",
              "stores": [
                "s3://bucket/prefix"
              ],
              "refreshInterval": "300s",
              "flushInterval": "62.250s",
              "pathPostfixTemplate": "Path{{Postfix.Template}}"
            },
            "flags": 4,
            "maxAppendRate": "4020303"
          }
        },
        "fieldConfig": {
          "a_field": {"field":"config"},
          "other/field": 42.5
        },
        "backfill": 3,
        "groupBy": [
          "key/one"
        ]
      }
    ],
    "lastVersion": "00:11:22:33",
    "secrets": {
      "acmeCo/password": "/credentials/password",
      "acmeCo/whole-config": ""
    }
  }
}

// apply
{
  "apply": {
    "materialization": {
      "name": "acmeCo/materialization",
      "connectorType": "IMAGE",
      "config": {"materialize":{"config":42}},
      "bindings": [
        {
          "resourceConfig": {"resource":"config"},
          "resourcePath": [
            "some",
            "path"
          ],
          "collection": {
            "name": "acmeCo/collection",
            "writeSchema": {"write":"schema"},
            "readSchema": {"read":"schema"},
            "key": [
              "/key/one",
              "/key/two"
            ],
            "uuidPtr": "/_meta/uuid",
            "partitionFields": [
              "type",
              "region"
            ],
            "projections": [
              {
                "ptr": "/json/ptr",
                "field": "a-field",
                "isPartitionKey": true,
                "inference": {
                  "types": [
                    "integer",
                    "string"
                  ],
                  "string": {
                    "contentType": "typ",
                    "format": "date",
                    "contentEncoding": "enc",
                    "maxLength": 12345,
                    "strMinimum": "100",
                    "strMaximum": "18446744073709551615"
                  },
                  "title": "title",
                  "description": "desc",
                  "default": {"def":"ault"},
                  "exists": "MUST",
                  "numeric": {
                    "hasMinimum": true,
                    "minimum": -1000.0
                  },
                  "array": {
                    "minItems": 10,
                    "hasMaxItems": true,
                    "maxItems": 20,
                    "itemTypes": [
                      "null",
                      "integer"
                    ]
                  },
                  "enum": [
                    "const-one",
                    "const-two"
                  ],
                  "reduce": "REDUCE_MERGE",
                  "redact": "REDACT_SHA256",
                  "contentMediaType": "typ"
                }
              }
            ],
            "ackTemplate": {"ack":"true"},
            "partitionTemplate": {
              "name": "partition/template",
              "replication": 3,
              "labels": {
                "labels": [
                  {
                    "name": "estuary.dev/foo",
                    "value": "label-value"
                  },
                  {
                    "name": "estuary.dev/bar",
                    "value": "other-value"
                  }
                ]
              },
              "fragment": {
                "length": "112233",
                "compressionCodec": "ZSTANDARD",
                "stores": [
                  "s3://bucket/prefix"
                ],
                "refreshInterval": "300s",
                "flushInterval": "62.250s",
                "pathPostfixTemplate": "Path{{Postfix.Template}}"
              },
              "flags": 4,
              "maxAppendRate": "4020303"
            }
          },
          "partitionSelector": {
            "include": {
              "labels": [
                {
                  "name": "estuary.dev/foo",
                  "value": "label-value"
                },
                {
                  "name": "estuary.dev/bar",
                  "value": "other-value"
                }
              ]
            },
            "exclude": {
              "labels": [
                {
                  "name": "my-label",
                  "value": "prefix/",
                  "prefix": true
                }
              ]
            }
          },
          "priority": 3,
          "fieldSelection": {
            "keys": [
              "key/one"
            ],
            "values": [
              "val/two"
            ],
            "document": "flow_document",
            "fieldConfig": {
              "a_field": {"field":"config"},
              "other/field": 42.5
            }
          },
          "journalReadSuffix": "materialize/acmeCo/materialization/some%20path.v1",
          "notBefore": "2023-08-11T03:00:27+00:00",
          "notAfter": "2023-03-28T10:40:00+00:00",
          "backfill": 1,
          "stateKey": "some%20path.v1",
          "serPolicy": {
            "strTruncateAfter": 65536,
            "nestedObjTruncateAfter": 1000,
            "arrayTruncateAfter": 1000
          }
        }
      ],
      "shardTemplate": {
        "id": "shard/template",
        "recoveryLogPrefix": "recovery/prefix",
        "hintPrefix": "hint/prefix",
        "hintBackups": 3,
        "maxTxnDuration": "60s",
        "hotStandbys": 1,
        "labels": {
          "labels": [
            {
              "name": "estuary.dev/foo",
              "value": "label-value"
            },
            {
              "name": "estuary.dev/bar",
              "value": "other-value"
            }
          ]
        },
        "ringBufferSize": 44556,
        "readChannelSize": 112233
      },
      "recoveryLogTemplate": {
        "name": "recovery/template",
        "replication": 3,
        "fragment": {
          "length": "1048576",
          "compressionCodec": "SNAPPY",
          "stores": [
            "s3://bucket/recovery"
          ],
          "refreshInterval": "300s"
        }
      },
      "networkPorts": [
        {
          "number": 8080,
          "protocol": "https",
          "public": true
        },
        {
          "number": 9000
        }
      ],
      "triggers": [{"method":"POST","payloadTemplate":"{}","url":"https://example.com/webhook"}],
      "createdAt": "2025-07-09",
      "syncSchedule": {"baseInterval":"4h","timezone":"America/New_York","windows":[{"end":"17:00","interval":"30m","start":"09:00"}]},
      "secrets": {
        "acmeCo/password": "/credentials/password",
        "acmeCo/whole-config": ""
      },
      "execution": {
        "vmm": true,
        "egress": {
          "hosts": [
            "api.acmeco.example",
            "*.svc.acmeco.example"
          ]
        }
      }
    },
    "version": "11:22:33:44",
    "lastVersion": "00:11:22:33",
    "state": {"connector":"state"}
  }
}

// open
{
  "open": {
    "materialization": {
      "name": "acmeCo/materialization",
      "connectorType": "IMAGE",
      "config": {"materialize":{"config":42}},
      "bindings": [
        {
          "resourceConfig": {"resource":"config"},
          "resourcePath": [
            "some",
            "path"
          ],
          "collection": {
            "name": "acmeCo/collection",
            "writeSchema": {"write":"schema"},
            "readSchema": {"read":"schema"},
            "key": [
              "/key/one",
              "/key/two"
            ],
            "uuidPtr": "/_meta/uuid",
            "partitionFields": [
              "type",
              "region"
            ],
            "projections": [
              {
                "ptr": "/json/ptr",
                "field": "a-field",
                "isPartitionKey": true,
                "inference": {
                  "types": [
                    "integer",
                    "string"
                  ],
                  "string": {
                    "contentType": "typ",
                    "format": "date",
                    "contentEncoding": "enc",
                    "maxLength": 12345,
                    "strMinimum": "100",
                    "strMaximum": "18446744073709551615"
                  },
                  "title": "title",
                  "description": "desc",
                  "default": {"def":"ault"},
                  "exists": "MUST",
                  "numeric": {
                    "hasMinimum": true,
                    "minimum": -1000.0
                  },
                  "array": {
                    "minItems": 10,
                    "hasMaxItems": true,
                    "maxItems": 20,
                    "itemTypes": [
                      "null",
                      "integer"
                    ]
                  },
                  "enum": [
                    "const-one",
                    "const-two"
                  ],
                  "reduce": "REDUCE_MERGE",
                  "redact": "REDACT_SHA256",
                  "contentMediaType": "typ"
                }
              }
            ],
            "ackTemplate": {"ack":"true"},
            "partitionTemplate": {
              "name": "partition/template",
              "replication": 3,
              "labels": {
                "labels": [
                  {
                    "name": "estuary.dev/foo",
                    "value": "label-value"
                  },
                  {
                    "name": "estuary.dev/bar",
                    "value": "other-value"
                  }
                ]
              },
              "fragment": {
                "length": "112233",
                "compressionCodec": "ZSTANDARD",
                "stores": [
                  "s3://bucket/prefix"
                ],
                "refreshInterval": "300s",
                "flushInterval": "62.250s",
                "pathPostfixTemplate": "Path{{Postfix.Template}}"
              },
              "flags": 4,
              "maxAppendRate": "4020303"
            }
          },
          "partitionSelector": {
            "include": {
              "labels": [
                {
                  "name": "estuary.dev/foo",
                  "value": "label-value"
                },
                {
                  "name": "estuary.dev/bar",
                  "value": "other-value"
                }
              ]
            },
            "exclude": {
              "labels": [
                {
                  "name": "my-label",
                  "value": "prefix/",
                  "prefix": true
                }
              ]
            }
          },
          "priority": 3,
          "fieldSelection": {
            "keys": [
              "key/one"
            ],
            "values": [
              "val/two"
            ],
            "document": "flow_document",
            "fieldConfig": {
              "a_field": {"field":"config"},
              "other/field": 42.5
            }
          },
          "journalReadSuffix": "materialize/acmeCo/materialization/some%20path.v1",
          "notBefore": "2023-08-11T03:00:27+00:00",
          "notAfter": "2023-03-28T10:40:00+00:00",
          "backfill": 1,
          "stateKey": "some%20path.v1",
          "serPolicy": {
            "strTruncateAfter": 65536,
            "nestedObjTruncateAfter": 1000,
            "arrayTruncateAfter": 1000
          }
        }
      ],
      "shardTemplate": {
        "id": "shard/template",
        "recoveryLogPrefix": "recovery/prefix",
        "hintPrefix": "hint/prefix",
        "hintBackups": 3,
        "maxTxnDuration": "60s",
        "hotStandbys": 1,
        "labels": {
          "labels": [
            {
              "name": "estuary.dev/foo",
              "value": "label-value"
            },
            {
              "name": "estuary.dev/bar",
              "value": "other-value"
            }
          ]
        },
        "ringBufferSize": 44556,
        "readChannelSize": 112233
      },
      "recoveryLogTemplate": {
        "name": "recovery/template",
        "replication": 3,
        "fragment": {
          "length": "1048576",
          "compressionCodec": "SNAPPY",
          "stores": [
            "s3://bucket/recovery"
          ],
          "refreshInterval": "300s"
        }
      },
      "networkPorts": [
        {
          "number": 8080,
          "protocol": "https",
          "public": true
        },
        {
          "number": 9000
        }
      ],
      "triggers": [{"method":"POST","payloadTemplate":"{}","url":"https://example.com/webhook"}],
      "createdAt": "2025-07-09",
      "syncSchedule": {"baseInterval":"4h","timezone":"America/New_York","windows":[{"end":"17:00","interval":"30m","start":"09:00"}]},
      "secrets": {
        "acmeCo/password": "/credentials/password",
        "acmeCo/whole-config": ""
      },
      "execution": {
        "vmm": true,
        "egress": {
          "hosts": [
            "api.acmeco.example",
            "*.svc.acmeco.example"
          ]
        }
      }
    },
    "version": "11:22:33:44",
    "range": {
      "keyBegin": 1122867,
      "keyEnd": 1146447479,
      "rClockBegin": 2291772091,
      "rClockEnd": 3437096703
    },
    "state": {"connector":{"state":42}},
    "sealedConfig": {"encrypted":"c2VjcmV0","sops":{"mac":"abc"}}
  }
}

// load
{
  "load": {
    "binding": 12,
    "key": [42,"hi"],
    "keyPacked": "VkseCQ=="
  }
}

// flush
{
  "flush": {
    "statePatches": [{"flushed":1}],
    "backfillBegins": [
      {
        "binding": 2,
        "timestamp": "2023-11-14T22:13:20+00:00"
      }
    ],
    "backfillCompletes": [
      {
        "binding": 3,
        "timestamp": "2023-11-14T22:21:40.123+00:00"
      }
    ]
  }
}

// store
{
  "store": {
    "binding": 3,
    "key": [true,null],
    "keyPacked": "WhUA",
    "values": [3.14159,"field!"],
    "valuesPacked": "PFs=",
    "doc": {"full":"document"},
    "exists": true,
    "delete": true
  }
}

// start_commit
{
  "startCommit": {
    "runtimeCheckpoint": {
      "sources": {
        "a/read/journal;suffix": {
          "readThrough": "12345",
          "producers": [
            {
              "id": "AwkIBQc=",
              "state": {
                "lastAck": "8675",
                "begin": "1111"
              }
            },
            {
              "id": "BwxmKx0=",
              "state": {
                "lastAck": "309",
                "begin": "2222"
              }
            }
          ]
        }
      },
      "ackIntents": {
        "an/ack/journal": "AwQCBQ=="
      }
    },
    "statePatches": [{"started":"commit"}]
  }
}

// acknowledge
{
  "acknowledge": {
    "statePatches": [{"acked":true}]
  }
}

// internal
{
  "$internal": "EgJIaRgB"
}
